# whaleer-beta-1

./: .gitignore  CHANGELOG.md  basit_proje_agaci.txt  crud_01.py  db_01.py  db_schema.txt  db_schema_new.txt  deploy.yml  docker-compose.yml  gui_panel.py  listenkeys_01.py  log.txt  logger_01.py  main_01.py  main_scheduler.py  requirements.txt  test_01.py  test_connection.py  test_ws.py
backend/: .dockerignore  .env  .env.example  Dockerfile  db_schema_new.txt  drop_profit_share.py  requirements.txt  set_webhook.py
contracts/whaleer_vault/: Cargo.toml
contracts/whaleer_vault/src/: lib.rs
data_engine/: config.py  debug_ssl.py  queue_manager.py  run_binance.py  run_unified.py  starter.py
frontend/: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  next-i18next.config.js  package-lock.json  package.json  requirements.txt  tailwind.config.mjs
logs/: listenkey_logs_2025-06-02.json  listenkey_logs_2025-06-29.json  listenkey_logs_2025-06-30.json  listenkey_logs_2025-07-01.json  listenkey_logs_2025-07-02.json  listenkey_main_2025-07-02.json  performance_2025-07-02.json  scheduler_2025-07-02.json  scheduler_listenkey_logs_2025-06-29.json  scheduler_listenkey_logs_2025-06-30.json  scheduler_listenkey_logs_2025-07-01.json  scheduler_listenkey_logs_2025-07-02.json  trigger_manager_2025-07-02.json
mobile/: .easignore  .env  App.js  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json
scheduler/: __init__.py  async_scheduler.py  trigger_manager.py
scripts/: clear_binance_data.py  fix_binance_data.py
(+1070 files in other folders)
