[package]
name = "whaleer_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Bu satır WASM çıktısı için zorunludur

[dependencies]
soroban-sdk = "20.0.0" # Güncel Soroban SDK sürümü

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z" # Dosya boyutunu optimize et
lto = true
codegen-units = 1
panic = "abort"